# Approach

./: .dockerignore  Dockerfile.approach  README.md
approach/: CMakeLists.txt  Dockerfile.approach  README.md  package.xml
approach/docker/: README.md  ros_entrypoint.sh
approach/scripts/: approach_goal_service.py
approach/srv/: ApproachTarget.srv
approach/stella_approach/: CMakeLists.txt  package.xml
approach/stella_approach/launch/: approach_goal.launch.py
approach/yolo_msgs/msg/: BoundingBox3D.msg
docker/: README.md
stella_approach/: CMakeLists.txt  package.xml
stella_approach/launch/: approach_goal.launch.py
stella_approach/scripts/: approach_controller.py
yolo_msgs/: CMakeLists.txt  package.xml
yolo_msgs/srv/: GetTargetPosition.srv
